# lm_generation_cheatsheet

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  cli_prob_sequence.py  cli_prob_sequence_test.py  data_utils.py  generation.py  model_call_with_cache_test.py  model_with_cache.py  model_with_cache_test.py
src/hfdecoderutils/: model_call_with_cache_test.py  model_with_cache.py  model_with_cache_test.py
src/hfdecoderutils/utils/: int_utils.py
src/utils/: mylogger.py  mytorchtyping.py
